# briskgit-custom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  briskgit.rdbg  build.bat  build.sh  generate.bat  generate.sh  run.bat  run.sh
cmake/: FindDType.cmake
lib/D-Type/: readme-eval.txt  readme-fontconv.txt  readme-main.txt  readme-more.txt  readme-news-latest.txt  readme-news-previous.txt
lib/D-Type/engine/libs/arm64-osx_64-shared/: libdtypeaux.8.0.1.dylib  libdtypelay.8.0.1.dylib  libdtypepwr.8.0.1.dylib  libdtypestd.8.0.1.dylib  libdtypetxt.8.0.1.dylib  readme.txt
lib/D-Type/engine/libs/i386-linux_32-shared/: libdtypeaux.so.8.0.1  libdtypelay.so.8.0.1  libdtypepwr.so.8.0.1  libdtypestd.so.8.0.1  libdtypetxt.so.8.0.1  readme.txt
lib/D-Type/engine/libs/i386-osx_32-shared/: libdtypeaux.8.0.1.dylib  libdtypelay.8.0.1.dylib  libdtypepwr.8.0.1.dylib  libdtypestd.8.0.1.dylib  libdtypetxt.8.0.1.dylib  readme.txt
lib/D-Type/engine/libs/i386-win_32-dll/: dtypeaux.lib  dtypelay.lib  dtypepwr.lib  dtypestd.lib  dtypetxt.lib  readme.txt
lib/D-Type/engine/libs/x64-linux_64-shared/: libdtypeaux.so.8.0.1  libdtypelay.so.8.0.1  libdtypepwr.so.8.0.1  libdtypestd.so.8.0.1  libdtypetxt.so.8.0.1  readme.txt
lib/D-Type/engine/libs/x64-win_64-dll/: dtypeaux.lib  dtypelay.lib  dtypepwr.lib  dtypestd.lib  dtypetxt.lib  readme.txt
lib/D-Type/engine/libs/x86_64-osx_64-shared/: libdtypeaux.8.0.1.dylib  libdtypelay.8.0.1.dylib  readme.txt  (+3 more)
lib/D-Type/examples-cpp/example_basic_animation/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_basic_output/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_color_rasterizer/: applet.cpp  data.h  main.cpp
lib/D-Type/examples-cpp/example_font_converter/: main.cpp
lib/D-Type/examples-cpp/example_layout_extension/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_powerdoc_frames/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_powerdoc_output/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_powerdoc_viewer/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_text_animation/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_text_application/: main.cpp
lib/D-Type/examples-cpp/example_text_output/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_textpro_builder1/: applet.cpp  main.cpp
lib/D-Type/examples-cpp/example_textpro_builder2/: applet.cpp  main.cpp
lib/D-Type/exec/a-rasterizer/: example_color_rasterizer_linux  example_color_rasterizer_osx
lib/D-Type/exec/b-foundation/: example_basic_animation_linux  example_basic_animation_osx  example_basic_output_linux  example_basic_output_osx  example_font_converter_linux  example_font_converter_osx  example_layout_extension_linux  example_layout_extension_osx
lib/D-Type/exec/c-powerdoc/: example_powerdoc_frames_linux  example_powerdoc_frames_osx  example_powerdoc_output_linux  example_powerdoc_output_osx  example_powerdoc_viewer_linux  example_powerdoc_viewer_osx
lib/D-Type/exec/d-text/: dtype_eval_notice.txt  example_text_animation_linux  example_text_animation_osx  example_text_application_linux  example_text_application_osx  example_text_output_linux  example_text_output_osx
lib/D-Type/exec/e-textpro/: example_textpro_builder1_linux  example_textpro_builder1_osx  example_textpro_builder2_linux  example_textpro_builder2_osx
lib/D-Type/exec/tools/: font_optimizer_linux  font_optimizer_osx  font_utility.bat  font_utility_linux  font_utility_osx  powerdoc_pix2vec_linux  powerdoc_pix2vec_osx
lib/D-Type/files/hyphendict/: bg.hyp  cs.hyp  da.hyp  de.hyp  el-monoton.hyp  el-polyton.hyp  en.hyp  es.hyp  fi.hyp  fr.hyp  hr.hyp  hu.hyp  it.hyp  nb.hyp  nl.hyp  nn.hyp  pl.hyp  pt.hyp  ro.hyp  ru.hyp  sk.hyp  sl.hyp  sr-cyrl.hyp  sv.hyp  tr.hyp  uk.hyp
lib/D-Type/files/powerdoc/: analogue_clock.pdc  anchored_objects-rich_text_arc-perspective.pdc  anchored_objects-rich_text_arc.pdc  anchored_objects-rich_text_area-perspective.pdc  anchored_objects-rich_text_area.pdc  anchored_objects-rich_text_path-perspective.pdc  anchored_objects-rich_text_path.pdc  api_overview.pdc  arabic-perspective.pdc  arabic.pdc  arabic_dialog.pdc  basic_concepts.pdc  basic_example1.pdc  basic_example2.pdc  bidi_reordering-horizontal.pdc  bidi_reordering-vertical.pdc  bidi_rotation-horizontal.pdc  bidi_rotation-vertical.pdc  bitmap_image-channel_ordering.pdc  bitmap_image-pitch.pdc  chinese_text-vertical-ltr.pdc  chinese_text-vertical-rtl.pdc  chinese_text.pdc  complex_scripts-perspective.pdc  complex_scripts.pdc  custom_pattern_fill.pdc  dc_example-cranes.pdc  dc_example-gulls.pdc  dc_example-portrait.pdc  dc_example-rodin.pdc  dc_example-rose.pdc  dc_example-sunset.pdc  dc_rasterization-comparison.pdc  dc_rasterization-ultra_fast.pdc  delta_wing.pdc  dtype1.pdc  dtype2.pdc  dtype_engines.pdc  effect_catalogue.pdc  eiffel_tower.pdc  (+48 more)
lib/D-Type/files/raw/: base_180x165_8bpp.raw  menu1_180x165_8bpp.raw  menu2_180x165_8bpp.raw  menu3_180x165_8bpp.raw  menu4_180x165_8bpp.raw
lib/D-Type/files/shapedef/: b-curved.sdf  b-flat.sdf  lion.sdf  longhorn.sdf  polyline.sdf  starburst1.sdf  starburst2.sdf  tiger.sdf  triangle1.sdf  triangle2.sdf  triangle3.sdf  triangle4.sdf
lib/D-Type/fonts/: readme-base.txt  readme-extra.txt
lib/D-Type/includes/core/: dtype.h
lib/D-Type/includes/core-cpp/: dtengine.cpp  dtengine.h  dtype.h  dtype_l0.h  dtype_l1.h  dtype_l2.h  dtype_l3.h  dtype_l4.h  dtype_rast.h
lib/D-Type/includes/extras/: dtextras.cpp  dtextras.h  dtshapes.cpp  dtshapes.h  pdextras.cpp  pdextras.h
lib/D-Type/includes/utils/: dtform.h  dtwindow.h  dtxsystem.h
lib/D-Type/manuals/: index.htm
lib/SDL2-2.0.12/: CMakeLists.txt
lib/freetype/macos/2.10.1/: INSTALL_RECEIPT.json
lib/harfbuzz/macos/2.6.6/: INSTALL_RECEIPT.json
lib/sdl2/macos/2.0.12/: INSTALL_RECEIPT.json
src/: app.c  app.h  color.h  common.h  console.c  console.h  coretext.c  coretext.h  grapheme.c  grapheme.h  hash.c  hash.h  main.c  profiler.c  profiler.h  rect.c  rect.h  render.c  render.h  text.c  text.h  textfield.c  textfield.h  ustr.c  ustr.h  vec2.c  vec2.h
(+1589 files in other folders)
